<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vista.fragments.FragmentLogin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/email"
            android:id="@+id/email"
            android:layout_marginTop="65dp"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/loginstartbutton"
            android:layout_toStartOf="@+id/loginstartbutton" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/emailtxt"
            android:layout_below="@+id/email"
            android:layout_alignLeft="@+id/email"
            android:layout_alignStart="@+id/email"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/password"
            android:id="@+id/password"
            android:layout_marginTop="70dp"
            android:layout_below="@+id/email"
            android:layout_alignLeft="@+id/email"
            android:layout_alignStart="@+id/email" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordtxt"
            android:layout_below="@+id/password"
            android:layout_alignLeft="@+id/password"
            android:layout_alignStart="@+id/password"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingresar"
            android:id="@+id/loginstartbutton"
            android:layout_marginRight="89dp"
            android:layout_marginEnd="89dp"
            android:layout_below="@+id/password"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="58dp" />
    </RelativeLayout>


</FrameLayout>
